# qt5-examples

Chapter_2_p49/: dialog.cpp  dialog.h  dialog.ui
Chapter_3_p68/: Chapter_3_p68.pro  baseinfo.cpp  baseinfo.h  baseinfo.ui  contact.cpp  contact.h  contact.ui  detail.cpp  detail.h  detail.ui  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
Chapter_4_p112/: widget.cpp  widget.h
HelloWorld/: CMakeLists.txt  mainwindow.ui
MThread_1/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  generaterandomnum.cpp  generaterandomnum.h  mainwindow.cpp  quicksort.cpp  quicksort.h
MThread_2/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  generaterandomnum.cpp  generaterandomnum.h  mainwindow.cpp  mainwindow.h  quicksort.cpp  quicksort.h
MThread_3/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  generaterandomnum.cpp  generaterandomnum.h  mainwindow.cpp  mainwindow.ui  quicksort.cpp  quicksort.h
SendFileClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sendfile.cpp  sendfile.h
SendFileServer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytcpserver.cpp  mytcpserver.h  recievefile.cpp  recievefile.h
TCPClient/: CMakeLists.txt  client.cpp  client.h  client.ui  res.qrc
TCPServer/: CMakeLists.txt  server.cpp  server.h  server.ui
TestQJson/: mainwindow.cpp  mainwindow.h
build-Chapter_2_p49-unknown-Debug/: Chapter_2_p49  Makefile  moc_dialog.cpp  ui_dialog.h
build-Chapter_3_p68-unknown-Debug/: Chapter_3_p68  Makefile  moc_baseinfo.cpp  moc_contact.cpp  moc_detail.cpp  moc_mainwidget.cpp  ui_baseinfo.h  ui_contact.h  ui_detail.h  ui_mainwidget.h
build-Chapter_4_p112-unknown-Debug/: Chapter_4_p112  Makefile  moc_widget.cpp
build-HelloWorld-Desktop-Debug/: CMakeCache.txt  HelloWorld  Makefile  cmake_install.cmake
build-MThread_1-Desktop-Debug/: CMakeCache.txt  MThread_1  Makefile  cmake_install.cmake
build-MThread_2-Desktop-Debug/: CMakeCache.txt  MThread_2  Makefile  cmake_install.cmake
build-MThread_3-Desktop-Debug/: CMakeCache.txt  MThread_3  Makefile  (+1 more)
(+129 files in other folders)
